--- a/services/client/src/components/pages/signup/SignupPage.module.scss
+++ b/services/client/src/components/pages/signup/SignupPage.module.scss
@@ -9,9 +9,18 @@ $bg-img: url('../../../assets/background_img-min.png');
     width: 100vw;
     height: 100vh;
     padding-top: 8rem;
+    padding-bottom: 8rem;
     background: $n0 $bg-img no-repeat center center fixed;
     background-size: 135%;
     background-position: 43.484375rem;
+  
+}
+
+@media only screen and (max-height: 830px) {
+  .outer{
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .form{
@@ -21,7 +30,7 @@ $bg-img: url('../../../assets/background_img-min.png');
 
 
 .logoContainer{
-    margin-bottom: 7.624375rem;
+    margin-bottom: 7.624375rem; 
 }
 
 .logo{
